HaskellParser.py
# Generated from Haskell.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HaskellParser ( Parser ):

    grammarFileName = "Haskell.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'::'", "'IO'", "'()'", "'='", 
                     "'do'", "'{'", "'}'", "'read'", "'putStrLn'", "'++'", 
                     "'<-'", "'getLine'", "'if'", "'then'", "'else'", "'while'", 
                     "'end'", "'||'", "'&&'", "'!'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "'Int'", "'Double'", "'let'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT_T", "DOUBLE_T", "LET", 
                      "DOUBLE", "INT", "STRING", "ID", "WS" ]

    RULE_program = 0
    RULE_lista_declaracao = 1
    RULE_declaracao = 2
    RULE_atribuicao = 3
    RULE_tipo = 4
    RULE_escrita = 5
    RULE_leitura = 6
    RULE_se = 7
    RULE_enquanto = 8
    RULE_bloco = 9
    RULE_expressao = 10
    RULE_termo = 11
    RULE_fator = 12
    RULE_inteiro = 13
    RULE_real = 14
    RULE_identificador = 15

    ruleNames =  [ "program", "lista_declaracao", "declaracao", "atribuicao", 
                   "tipo", "escrita", "leitura", "se", "enquanto", "bloco", 
                   "expressao", "termo", "fator", "inteiro", "real", "identificador" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    INT_T=34
    DOUBLE_T=35
    LET=36
    DOUBLE=37
    INT=38
    STRING=39
    ID=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HaskellParser.EOF, 0)

        def lista_declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.Lista_declaracaoContext)
            else:
                return self.getTypedRuleContext(HaskellParser.Lista_declaracaoContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = HaskellParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(HaskellParser.T__0)
            self.state = 33
            self.match(HaskellParser.T__1)
            self.state = 34
            self.match(HaskellParser.T__2)
            self.state = 35
            self.match(HaskellParser.T__3)
            self.state = 36
            self.match(HaskellParser.T__0)
            self.state = 37
            self.match(HaskellParser.T__4)
            self.state = 38
            self.match(HaskellParser.T__5)
            self.state = 39
            self.match(HaskellParser.T__6)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1168231252992) != 0):
                self.state = 40
                self.lista_declaracao()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(HaskellParser.T__7)
            self.state = 47
            self.match(HaskellParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_declaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco(self):
            return self.getTypedRuleContext(HaskellParser.BlocoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_lista_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_declaracao" ):
                listener.enterLista_declaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_declaracao" ):
                listener.exitLista_declaracao(self)




    def lista_declaracao(self):

        localctx = HaskellParser.Lista_declaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lista_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(HaskellParser.AtribuicaoContext,0)


        def escrita(self):
            return self.getTypedRuleContext(HaskellParser.EscritaContext,0)


        def leitura(self):
            return self.getTypedRuleContext(HaskellParser.LeituraContext,0)


        def se(self):
            return self.getTypedRuleContext(HaskellParser.SeContext,0)


        def enquanto(self):
            return self.getTypedRuleContext(HaskellParser.EnquantoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = HaskellParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.atribuicao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.escrita()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.leitura()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.se()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.enquanto()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(HaskellParser.IdentificadorContext,i)


        def expressao(self):
            return self.getTypedRuleContext(HaskellParser.ExpressaoContext,0)


        def LET(self):
            return self.getToken(HaskellParser.LET, 0)

        def tipo(self):
            return self.getTypedRuleContext(HaskellParser.TipoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = HaskellParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atribuicao)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.identificador()
                self.state = 59
                self.match(HaskellParser.T__4)
                self.state = 60
                self.expressao(0)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(HaskellParser.LET)
                self.state = 63
                self.identificador()
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.match(HaskellParser.T__4)
                    self.state = 65
                    self.match(HaskellParser.T__8)
                    self.state = 66
                    self.identificador()
                    self.state = 67
                    self.match(HaskellParser.T__1)
                    self.state = 68
                    self.tipo()

                elif la_ == 2:
                    self.state = 70
                    self.match(HaskellParser.T__4)
                    self.state = 71
                    self.expressao(0)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_T(self):
            return self.getToken(HaskellParser.INT_T, 0)

        def DOUBLE_T(self):
            return self.getToken(HaskellParser.DOUBLE_T, 0)

        def getRuleIndex(self):
            return HaskellParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = HaskellParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==34 or _la==35):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HaskellParser.STRING, 0)

        def expressao(self):
            return self.getTypedRuleContext(HaskellParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_escrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrita" ):
                listener.enterEscrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrita" ):
                listener.exitEscrita(self)




    def escrita(self):

        localctx = HaskellParser.EscritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_escrita)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(HaskellParser.T__9)
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.state = 79
                self.match(HaskellParser.STRING)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 80
                    self.match(HaskellParser.T__10)
                    self.state = 81
                    self.expressao(0)


                pass
            elif token in [21, 29, 32, 37, 38, 40]:
                self.state = 84
                self.expressao(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(HaskellParser.IdentificadorContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(HaskellParser.AtribuicaoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_leitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeitura" ):
                listener.enterLeitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeitura" ):
                listener.exitLeitura(self)




    def leitura(self):

        localctx = HaskellParser.LeituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_leitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.identificador()
            self.state = 88
            self.match(HaskellParser.T__11)
            self.state = 89
            self.match(HaskellParser.T__12)
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 90
                self.atribuicao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(HaskellParser.ExpressaoContext,0)


        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.BlocoContext)
            else:
                return self.getTypedRuleContext(HaskellParser.BlocoContext,i)


        def se(self):
            return self.getTypedRuleContext(HaskellParser.SeContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_se

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSe" ):
                listener.enterSe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSe" ):
                listener.exitSe(self)




    def se(self):

        localctx = HaskellParser.SeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_se)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(HaskellParser.T__13)
            self.state = 94
            self.expressao(0)
            self.state = 95
            self.match(HaskellParser.T__14)
            self.state = 96
            self.bloco()

            self.state = 97
            self.match(HaskellParser.T__15)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 98
                self.se()
                pass

            elif la_ == 2:
                self.state = 99
                self.bloco()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(HaskellParser.ExpressaoContext,0)


        def bloco(self):
            return self.getTypedRuleContext(HaskellParser.BlocoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnquanto" ):
                listener.enterEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnquanto" ):
                listener.exitEnquanto(self)




    def enquanto(self):

        localctx = HaskellParser.EnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(HaskellParser.T__16)
            self.state = 103
            self.expressao(0)
            self.state = 104
            self.match(HaskellParser.T__5)
            self.state = 105
            self.bloco()
            self.state = 106
            self.match(HaskellParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(HaskellParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = HaskellParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bloco)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 108
                    self.declaracao()

                else:
                    raise NoViableAltException(self)
                self.state = 111 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ExpressaoContext,i)


        def termo(self):
            return self.getTypedRuleContext(HaskellParser.TermoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HaskellParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expressao, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 114
                self.match(HaskellParser.T__20)
                self.state = 115
                self.expressao(10)
                pass
            elif token in [29, 32, 37, 38, 40]:
                self.state = 116
                self.termo(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 149
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 119
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 120
                        self.match(HaskellParser.T__18)
                        self.state = 121
                        self.expressao(13)
                        pass

                    elif la_ == 2:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 122
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 123
                        self.match(HaskellParser.T__19)
                        self.state = 124
                        self.expressao(12)
                        pass

                    elif la_ == 3:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 125
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 126
                        self.match(HaskellParser.T__21)
                        self.state = 127
                        self.expressao(10)
                        pass

                    elif la_ == 4:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 128
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 129
                        self.match(HaskellParser.T__22)
                        self.state = 130
                        self.expressao(9)
                        pass

                    elif la_ == 5:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 131
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 132
                        self.match(HaskellParser.T__23)
                        self.state = 133
                        self.expressao(8)
                        pass

                    elif la_ == 6:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 134
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 135
                        self.match(HaskellParser.T__24)
                        self.state = 136
                        self.expressao(7)
                        pass

                    elif la_ == 7:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 137
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 138
                        self.match(HaskellParser.T__25)
                        self.state = 139
                        self.expressao(6)
                        pass

                    elif la_ == 8:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 140
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 141
                        self.match(HaskellParser.T__26)
                        self.state = 142
                        self.expressao(5)
                        pass

                    elif la_ == 9:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 143
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 144
                        self.match(HaskellParser.T__27)
                        self.state = 145
                        self.termo(0)
                        pass

                    elif la_ == 10:
                        localctx = HaskellParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 146
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 147
                        self.match(HaskellParser.T__28)
                        self.state = 148
                        self.termo(0)
                        pass

             
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self):
            return self.getTypedRuleContext(HaskellParser.FatorContext,0)


        def termo(self):
            return self.getTypedRuleContext(HaskellParser.TermoContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)



    def termo(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HaskellParser.TermoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_termo, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.fator()
            self._ctx.stop = self._input.LT(-1)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 163
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = HaskellParser.TermoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_termo)
                        self.state = 157
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 158
                        self.match(HaskellParser.T__29)
                        self.state = 159
                        self.fator()
                        pass

                    elif la_ == 2:
                        localctx = HaskellParser.TermoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_termo)
                        self.state = 160
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 161
                        self.match(HaskellParser.T__30)
                        self.state = 162
                        self.fator()
                        pass

             
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(HaskellParser.ExpressaoContext,0)


        def fator(self):
            return self.getTypedRuleContext(HaskellParser.FatorContext,0)


        def inteiro(self):
            return self.getTypedRuleContext(HaskellParser.InteiroContext,0)


        def real(self):
            return self.getTypedRuleContext(HaskellParser.RealContext,0)


        def identificador(self):
            return self.getTypedRuleContext(HaskellParser.IdentificadorContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)




    def fator(self):
